--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_REQRES_API = "https://student-management-api.herokuapp.com/"
+REACT_APP_REQRES_API = "https://student-management-api.herokuapp.com"
